--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-primary bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/">
+    <a class="navbar-brand" routerLink="/home">
       <img src="../assets/st1.png" alt="" width="30" height="30" />
     </a>
     <button
