--- a/src/app/facilities/facilities.component.css
+++ b/src/app/facilities/facilities.component.css
@@ -1,5 +1,14 @@
-div {
-  width: 100%;
-  height: 100%;
-  background-color: rgb(185, 216, 245);
+.cardhead {
+  color: blue;
+  font-family: "Times New Roman", Times, serif;
+  font-size: small;
+}
+.facItem {
+  height: 50px;
+  width: 200px;
+  background-color: lightblue;
+}
+
+.body {
+  background-color: aqua;
 }
