--- a/src/app/home/body/body.component.html
+++ b/src/app/home/body/body.component.html
@@ -1,60 +1,68 @@
-<div class="body-left"></div>
-<div class="container">
-  <div class="sub-title">
-    <h1>Channel your doctor</h1>
+<!--
+  [Component Name]: BodyComponent
+  [Description]   : Display the body UI
+  [Actions]       : A0 - Search for a doctor
+                    A1 - Channel a doctor
+                    A2 - Route to TeamComponent
+
+-->
+
+<h1>Channel your doctor</h1>
+
+<div class="row">
+  <div class="col-sm">
+    <mat-form-field class="sp-drop" appearance="fill">
+      <mat-label>Choose Specializaton</mat-label>
+      <select matNativeControl (change)="selectChangeHandler($event)">
+        <option value="" selected></option>
+        <option *ngFor="let sp of specializationList" value="{{ sp.id }}">
+          {{ sp.spName }}
+        </option>
+      </select>
+    </mat-form-field>
   </div>
-  <div class="row">
-    <div class="col-sm">
-      <mat-form-field class="sp-drop" appearance="fill">
-        <mat-label>Choose specializaton</mat-label>
-        <select matNativeControl (change)="selectChangeHandler($event)">
-          <option value="" selected></option>
-          <option *ngFor="let sp of specializationList" value="{{ sp.id }}">
-            {{ sp.spName }}
-          </option>
-        </select>
-      </mat-form-field>
-    </div>
-    <div class="col-sm">
-      <mat-form-field class="date-picker">
-        <mat-label>Choose a date</mat-label>
-        <input matInput [matDatepicker]="myDatePicker" />
-        <mat-datepicker-toggle
-          [for]="myDatePicker"
-          matSuffix
-        ></mat-datepicker-toggle>
-        <mat-datepicker #myDatePicker></mat-datepicker>
-      </mat-form-field>
-    </div>
-    <div class="col-sm">
-      <div class="s-btn">
-        <button
-          (click)="displayAvailableDocList()"
-          type="button"
-          class="btn btn-primary"
-        >
-          Search
-        </button>
-      </div>
+  <div class="col-sm">
+    <mat-form-field appearance="fill">
+      <mat-label>Pick a date</mat-label>
+      <input
+        matInput
+        [matDatepicker]="picker"
+        (dateInput)="addEvent('input', $event)"
+        (dateChange)="addEvent('change', $event)"
+      />
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+  </div>
+  <div class="col-sm">
+    <div class="s-btn">
+      <button
+        (click)="displayAvailableDocList()"
+        type="button"
+        class="btn btn-outline-primary btn-sm"
+      >
+        Search
+      </button>
     </div>
   </div>
-  <div class="doc-list-table">
-    Available doctor table
-    <table>
-      <thead>
-        <tr>
-          <th>Doctor Name</th>
-          <th>Channel</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let docName of filteredDocList">
-          <td>{{ docName.name }}</td>
-          <td>
-            <button type="button">Channel</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+</div>
+<div *ngIf="displayTable" class="doc-list-table">
+  <table class="table table-striped">
+    <thead></thead>
+    <tbody>
+      <tr *ngFor="let docName of filteredDocList">
+        <td>{{ docName.name }}</td>
+        <td>
+          <button
+            routerLink="/channel-form"
+            class="btn btn-outline-primary btn-sm"
+            type="button"
+            (click)="channelDocActions(docName.name)"
+          >
+            Channel
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
