--- a/src/app/home/header/header.component.html
+++ b/src/app/home/header/header.component.html
@@ -1,10 +1,7 @@
 <!--
-<img src="../assets/doctors.jpg " class="center" />
-<div>
-  Address : No 54/B , New town, Anuradhapura &nbsp;&nbsp;&nbsp;&nbsp; TP: 025 6
-  456 456 &nbsp;&nbsp;&nbsp;&nbsp; Opening hours : 8 AM - 10 PM
-  &nbsp;&nbsp;&nbsp;&nbsp;Registration number: XXXXX
-</div>
+  [Component Name]: HeaderComponent
+  [Description]   : Display the carousel
+  [Actions]       :
 
 -->
 
@@ -39,22 +36,22 @@
     <div class="carousel-item active">
       <img src="../assets/c1.png" class="d-block w-100" alt="..." />
       <div class="carousel-caption d-none d-md-block">
-        <h1>First slide label</h1>
-        <p>Some representative placeholder content for the first slide.</p>
+        <h1>Your health is our responsibility</h1>
+        <p>Qualified and trained staff is here to help you.</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="../assets/c1.png" class="d-block w-100" alt="..." />
       <div class="carousel-caption d-none d-md-block">
-        <h1>Second slide label</h1>
-        <p>Some representative placeholder content for the second slide.</p>
+        <h1>Confidential Service</h1>
+        <p>We are bounded to protect your privacy</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="../assets/c1.png" class="d-block w-100" alt="..." />
       <div class="carousel-caption d-none d-md-block">
-        <h1>Third slide label</h1>
-        <p>Some representative placeholder content for the third slide.</p>
+        <h1>Do the test today</h1>
+        <p>We provide test results within a day</p>
       </div>
     </div>
   </div>
