--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,3 +1,12 @@
+<!--
+  [Component Name]: NavBarComponent
+  [Description]   : Display the navigation bar UI
+  [Actions]       : A0 - Route to HomeComponent
+                    A1 - Route to FacilitiesComponent
+                    A2 - Route to TeamComponent
+
+-->
+
 <nav class="navbar navbar-expand-lg navbar-primary bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/home">
@@ -26,20 +35,6 @@
           <a class="nav-link" routerLink="/team">Team</a>
         </li>
       </ul>
-      <button
-        class="btn btn-outline-primary btn-sm mr-2"
-        type="submit"
-        routerLink="/login"
-      >
-        Log In
-      </button>
-      <button
-        class="btn btn-outline-primary btn-sm"
-        type="submit"
-        routerLink="/register"
-      >
-        Register
-      </button>
     </div>
   </div>
 </nav>
