Home screen was set as root

--- a/src/app/tests/tests.component.html
+++ b/src/app/tests/tests.component.html
@@ -1,3 +1,9 @@
+<!--
+  [Component Name]: TestComponent
+  [Description]   : Display the available test list UI
+  [Actions]       :
+-->
+
 <mat-list>
   <mat-list-item class="test-heading">Available Tests </mat-list-item>
   <mat-divider></mat-divider>
